added island info

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								<h3>To the Island</h3>
 								<p>There are two main ferry companies that provide transportation to the island. Sheplers and Starline. We recommend <b>Sheplers</b> for a bit more of a comfortable experience. But nobody is stopping you if you want to ride aboard Starline and see the "rooster tail" from their boat.</p>
 								<h3>On the Island</h3>
-								<p>Once you arrive on the island, you have a few options. If you are staying at a Bed & Breakfast, such as Hart's Inn, there will be <b>Porters</b> at the end of the dock who are available, as part of a gratutity based system, to take your luggage to the B&B for you. You can also call a <b>horse taxi</b> to take you and your luggage up to your hotel or B&B (charging about $12 per person). Or you are free to enjoy the scenery and take in all the sights and smells that come along with the Island experience as you <b>walk</b> to your destination! 
+								<p>Once you arrive on the island, you have a few options to get to your hotel or B&B. There will be <b>Porters</b> at the end of the dock who are available, as part of a gratutity based system, to take your luggage to your hotel or B&B for you. You can also call a <b>horse taxi</b> to take you and your luggage up to your hotel or B&B (charging about $12 per person). Or you are free to enjoy the scenery and take in all the sights and smells that come along with the Island experience as you <b>walk</b> to your destination! 
 								<br>
 								<br>Once you are all settled in, there are <b>bike rental</b> shops scattered throughout town that offer hourly and overnight rentals if you are looking for a bit more <i>speed</i> as you explore the Island.
 								<br>
@@ -109,7 +109,8 @@
 								<p>The cocktail hour will be a cash bar. However, There will be an open bar from 5pm until 8pm, so be sure to get your drinks in while you can!</p> 
 								<h3>Are kids welcome?</h3>
 								<p>While we love your little ones, our wedding is going to be an adults-only event so that everyone can relax and enjoy the evening. We appreciate you making arrangements ahead of time and leaving the kids at home so you can celebrate with us.</p>
-								
+								<h3>Do I have to spend the night on the Island?</h3>
+								<p>Of course not! The last boat to leave the island will be at 10:00pm (Occassionaly Starline will offer a midnight boat, but be sure to confirm this before relying on it), so you are free to take that boat over and save a chunk of change on a hotel in St Igance or Mackinaw City.</p>
 							</article>
 
 						<!-- rsvp -->
