optimize bg and update registry link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<li><a href="#schedule">SCHEDULE</a></li>
 								<li><a href="#lodging">LODGING</a></li>
 								<li><a href="#travel">TRAVEL</a></li>
-								<li><a href="https://www.google.com/">REGISTRY</a></li>
+								<li><a href="https://www.amazon.com/wedding/registry/26ZWNGC7MH8FQ?ref=wr_search_page_result_">REGISTRY</a></li>
 								<li><a href="#faqs">FAQs</a></li>
 								<li><a href="https://brianaandtyler.rsvpify.com">RSVP</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
