added contact form

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 								<li><a href="https://www.amazon.com/wedding/registry/26ZWNGC7MH8FQ?ref=wr_search_page_result_">REGISTRY</a></li>
 								<li><a href="#faqs">FAQs</a></li>
 								<li><a href="https://brianaandtyler.rsvpify.com">RSVP</a></li>
+								<li><a href="#contact">CONTACT US</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -46,8 +47,8 @@
 								<h2 class="major">SCHEDULE</h2>
 								<span class="image main"><img src="images/reception.jpg" alt="" /></span>
 								<h3>July 21st</h3>
-								<p>?:??pm: Rehersal Dinner
-								<br>?:??pm: Sip n' Sail (Feel free to join us if you are in town!)</p>
+								<p>TBD: Rehearsal Dinner
+								<br>TBD: Sip n' Sail (Feel free to join us if you are in town!)</p>
 								<h3>July 22nd</h3>
 								<p>2:30pm: Wedding Ceremony
 								<br>3:00pm: Cocktail Hour
@@ -142,6 +143,31 @@
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul> -->
+							</article>
+							
+													<!-- schedule -->
+							<article id="contact">
+								<h2 class="major">CONTACT US</h2>
+								<form method="post" action="https://formspree.io/f/mzbyjvyw">
+									<div class="fields">
+										<div class="field half">
+											<label for="name">Name</label>
+											<input type="text" name="name" id="name" />
+										</div>
+										<div class="field half">
+											<label for="email">Email</label>
+											<input type="text" name="_replyto" id="email" />
+										</div>
+										<div class="field">
+											<label for="message">Message</label>
+											<textarea name="message" id="message" rows="4"></textarea>
+										</div>
+									</div>
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="reset" value="Reset" /></li>
+									</ul>
+								</form>
 							</article>
 
 						<!-- Elements -->
