--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<h3>Are kids welcome?</h3>
 								<p>While we love your little ones, our wedding is going to be an adults-only event so that everyone can relax and enjoy the evening. We appreciate you making arrangements ahead of time and leaving the kids at home so you can celebrate with us.</p>
 								<h3>Do I have to spend the night on the Island?</h3>
-								<p>Of course not! The last boat to leave the island will be at 10:00pm (Occassionaly Starline will offer a midnight boat, but be sure to confirm this before relying on it), so you are free to take that boat over and save a chunk of change on a hotel in St Igance or Mackinaw City.</p>
+								<p>Of course not! The last boat to leave the island will be at 10:00pm (Occassionaly Starline will offer a midnight boat, but be sure to confirm this before relying on it), so you are free to take that boat over and save a chunk of change on a hotel in St Ignace or Mackinaw City.</p>
 							</article>
 
 						<!-- rsvp -->
